fix overflow for firefox

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
     max-height: 100vh;
     background-size: 100% 300%;  /* firefox requires both width & height declarations */
     background-position: bottom;
+    overflow: hidden;  /* firefox requires this, or it will scroll to show full background, offscreen animations, etc. */
     animation: night 8000ms 2000ms ease-in forwards;
 }
 
